down to about 50 pages, still got to make some serious cuts to background and then about 3 or 4 pages each from tensors and exps

--- a/acknowledge.tex
+++ b/acknowledge.tex
@@ -7,4 +7,4 @@ number or appear in the table of contents.
 
 \hl{WHO??}
 
-Andrej Karpathy, for generously ``lending'' a figure.
+%Andrej Karpathy, for generously ``lending'' a figure.
