--- a/vuwproject.sty
+++ b/vuwproject.sty
@@ -198,3 +198,10 @@ Internet: \Ecs@fromnetaddr}
    \hsize\linewidth}
 
 \def\endabstract{\egroup}
+
+%\makeatletter
+%\g@addto@macro \normalsize {%
+% \setlength\abovedisplayskip{5pt plus 2pt minus 2pt}%
+% \setlength\belowdisplayskip{5pt plus 2pt minus 2pt}%
+%}
+%\makeatother
